--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -40,13 +40,34 @@ body {
 .page-container{
   display: flex;
   flex-direction: column;
-  max-width: 45rem;
+  max-width: 60rem;
   gap: 0.5rem;
   margin: 4rem auto;
+  padding: 0 2rem;
 }
 .page-container > * {
   margin: 0;
 }
+
+.document-container{
+  margin: 1rem 0 0 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 1rem;
+}
+
+.document-card{
+  padding: 1.5rem 1rem;
+  background-color: #FFFFFF;
+  border-radius: 0.5rem;
+}.document-card:hover{
+  background-color: #EFEFEF;
+}.document-title{
+  margin: 0;
+  font-size: 0.75rem;
+  font-weight: 400;
+}
+
 .login-label{
   font-size: 2rem;
   margin-bottom: 2rem;
@@ -60,6 +81,7 @@ body {
   border: 1px solid #ABABAB;
 }
 
+
 .button-primary{
   font-weight: 700;
   margin-top: 2rem;
@@ -70,6 +92,11 @@ body {
   border: 0px solid hsl(230, 60%, 30%) !important;
 }
 
+#button-general{
+  margin-top: 3 rem;
+  padding : 1 rem .1rem !important;
+  background: aquamarine
+}
 @page {
   margin: 1in;
 }
