--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -60,6 +60,7 @@ body {
   padding: 1.5rem 1rem;
   background-color: #FFFFFF;
   border-radius: 0.5rem;
+  box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, .1);
 }.document-card:hover{
   background-color: #EFEFEF;
 }.document-title{
