--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -42,7 +42,7 @@ body {
   flex-direction: column;
   max-width: 60rem;
   gap: 0.5rem;
-  margin: 4rem auto;
+  margin: 0 auto 4rem auto;
   padding: 0 2rem;
 }
 .page-container > * {
@@ -85,8 +85,7 @@ body {
 
 .button-primary{
   font-weight: 700;
-  margin-top: 2rem;
-  padding: 1rem .1rem !important;
+  padding: 1rem 2rem;
   border-radius: 0.5rem;
   background: hsl(230, 50%, 90%);
   color: hsl(230, 60%, 30%);
